# vagmi-backend

./: .env.example  .gitignore  ACTIVITY_SESSION_API.md  CLAUDE.md  CTET_NumberSystem_MCQ_Bank.docx  FLUTTER_INTEGRATION.md  PUSH_NOTIFICATIONS_SETUP.md  Procfile  RAZORPAY_INTEGRATION.md  README.md  check_embedding_dim.py  delete_user.py  main.py  pyproject.toml  requirements.txt  test_gemini_ocr.py  vagmi-chapter-detail.html  vagmi-chapters.html  vagmi-mcq-practice.html  vagmi-notes-pipeline-markdown.docx  vagmi-notifications-streak.html
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 02dc3f7cd960_add_ondelete_cascade_to_topics.py  0b9f1f2e3a45_add_activity_publish_flag.py  0f63a19ca7aa_merge_multiple_heads.py  20260118_213804_add_activity_groups.py  2daf2bcfb918_added_chapter_num_and_premium_toggle.py  38264f7fcb87_on_delete_set_null.py  3852c215bdf6_add_comp_chat_sessions.py  41771834264e_add_llm_notes_and_qa_patterns_tables.py  5bec80fe0b5d_add_ai_feedback_to_activity_answers.py  632afca4d205_on_delete_set_null.py  65150b1c1b0f_merge_heads.py  6e600265114c_added_username_field.py  6ee9de4a0e5e_add_activities_tables.py  6f03607bdc5c_add_llmusage_table.py  7d5c1a9e4b11_add_activity_generation_jobs.py  8a55f61eb0da_add_dob_and_gender_to_user.py  8f4da26ad4f0_update_llm_notes_and_qa_patterns_to_pdf_.py  9852db85a28a_add_topics_table.py  98f9b459577f_added_class_board_medium_to_user.py  9c2b7d4e1a23_add_activity_tables.py  a1b2c3d4e5f6_add_razorpay_and_duration_days.py  a570eb3d3480_add_competitive_exam_tables.py  a8f9e2b1c4d3_add_markdown_fields_to_comp_student_notes.py  a937b8c78e13_update_student_notes.py  b2c3d4e5f6a7_add_fcm_token_and_notifications.py  b5c6d7e8f9a0_add_audio_sync_json_to_comp_notes.py  b5d01a74a710_add_previous_year_question_papers.py  c1d2e3f4a5b6_add_student_features.py  c3d4e5f6a7b8_add_ondelete_cascade_to_all_fks.py  c7c0f3b6c9ab_add_sort_order_columns.py  c9e0a304ea23_add_chapter_artifacts_table.py  d4e5f6a7b8c9_add_fixed_end_date_to_subscription_plans.py  d6bda523532f_add_audio_fields_to_student_content.py  e1f2a3b4c5d6_add_comp_activity_sessions_and_answers.py  e3f4a5b6c7d8_add_user_comp_profile.py  e670eb1a1a8a_add_llm_images_table.py  f05e014bcbba_on_delete_set_null.py  f07eed085048_merge_heads.py  f37f4f255924_add_comp_chapter_faqs.py  f3b7a9b0e4c1_add_original_filename_columns.py  (+3 more)
app/: main.py
app/core/: config.py  limiter.py
app/models/: __init__.py  academic_hierarchy.py  activities.py  activity_jobs.py  admin.py  base.py  chapter_artifacts.py  comp_activities.py  comp_artifacts.py  comp_chat.py  comp_llm_resources.py  comp_streak.py  comp_student_content.py  comp_study_time.py  comp_wrong_answers.py  competitive_hierarchy.py  llm_resources.py  (+8 more)
docs/: comp-chat-flutter.md  comp-chat-sessions.md  comp-faqs.md  comp-notes-flutter-integration.md  comp_chat_agent.md  subscriptions.md
scripts/: regenerate_artifacts.py  smoke_test_comp_agent.py  smoke_test_sessions.py
tests/: test_subscriptions.py
(+68 files in other folders)
