[project]
name = "vagmi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "alembic>=1.16.5",
    "asyncio>=4.0.0",
    "bcrypt>=5.0.0",
    "boto3>=1.40.55",
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.0",
    "langchain-google-genai>=4.0.0",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=0.3.10",
    "langgraph>=1.0.5",
    "loguru>=0.7.3",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.11.7",
    "pyotp>=2.9.0",
    "pypdf>=6.0.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
